--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
@@ -64,17 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ingresos = 1000\n",
+    "gastos = 100\n",
+    "beneficios = ingresos - gastos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "100\n",
+      "Los beneficios han sido de:\n",
+      "900\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ingresos)\n",
+    "print(gastos)\n",
+    "print(\"Los beneficios han sido de:\")\n",
+    "print(beneficios)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +105,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de junio han sido 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"junio\"\n",
+    "print(\"Los beneficios de %s han sido %s millones\" %(mes, beneficios))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de 900 han sido junio millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Los beneficios de %s han sido %s millones\" %(beneficios, mes))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de agostos han sido 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"agostos\"\n",
+    "print(\"Los beneficios de\", mes,\"han sido\", beneficios,\"millones\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,24 +175,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Comentario simple"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explica la línea\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Explica la línea\") # Comentario en la propia linea"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nComentario\\nQue puede contener varias lineas\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Comentario\n",
+    "Que puede contener varias lineas\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
@@ -161,17 +248,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ventas_julio' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m ventas_jun_jul = ventas_junio + \u001b[43mventas_julio\u001b[49m\n\u001b[32m      2\u001b[39m ventas_junio = \u001b[32m100\u001b[39m\n\u001b[32m      3\u001b[39m ventas_julio = \u001b[32m150\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'ventas_julio' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_jun_jul = ventas_junio + ventas_julio\n",
+    "ventas_junio = 100\n",
+    "ventas_julio = 150"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ventas_junio"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +298,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ventas_junio = 100\n",
+    "ventas_julio = 150\n",
+    "ventas_jun_jul = ventas_junio + ventas_julio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las ventas de junio a julio son 250\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Las ventas de junio a julio son {ventas_jun_jul}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,17 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8 75\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura = 1.80; peso = 75\n",
+    "print(altura, peso)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x,y,z = 12,23,45"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,10 +373,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'altura' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m altura = \u001b[32m1.85\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m altura\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43maltura\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'altura' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "altura = 1.85\n",
+    "del altura\n",
+    "print(altura)"
+   ]
   },
   {
    "cell_type": "code",
@@ -238,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   },
   "nbTranslate": {
    "displayLangs": [
