--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/03_Tipos_de_datos_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/03_Tipos_de_datos_alumno_wtoc.ipynb
@@ -67,10 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero = 22\n",
+    "type(numero)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_real = 22.0\n",
+    "type(numero_real)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_real_decimales = 22.45123\n",
+    "type(numero_real_decimales)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,9 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sumas/restas\n",
+      "3\n",
+      "3.0\n",
+      "3.0\n",
+      "-1\n",
+      "Multiplicaciones/Divisiones\n",
+      "4\n",
+      "4.0\n",
+      "1.0\n",
+      "100.0\n",
+      "Resto de la división\n",
+      "3.3333333333333335\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Sumas/restas\")\n",
     "print(1 + 2)\n",
@@ -151,10 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadena = \"String\"\n",
+    "type(cadena)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,10 +242,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadena1 = \"Esto es una 'cadena'\"\n",
+    "type(cadena1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +270,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salto del linea\n",
+      "\testo es un salto de linea y una tabulación\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena2 = \"salto del linea\\n\\testo es un salto de linea y una tabulación\"\n",
+    "print(cadena2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,10 +296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "combinacion de strings\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena3 = \"combinacion de \"\n",
+    "cadena4 = \"strings\"\n",
+    "print(cadena3 + cadena4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +325,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boolenao = False\n",
+    "type(boolenao)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dinero = 5\n",
+    "dinero >= 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dinero = 15\n",
+    "cond_1 = dinero >= 15\n",
+    "print(cond_1)\n",
+    "type(cond_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,10 +397,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(1.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(-74))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(\"3.45\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(cond_1))"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
