--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/04_Conversion_Tipos_e_Input_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/04_Conversion_Tipos_e_Input_wtoc.ipynb
@@ -59,10 +59,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "24\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_real = 24.69\n",
+    "print(type(num_real))\n",
+    "\n",
+    "num_entero = int(num_real)\n",
+    "print(num_entero)\n",
+    "print(type(num_entero))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.69\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Esta funcion tiene dos argumentos: el número y la cantidad de decimales que queremos conservar.\n",
-    "# Veremos funciones más adelante.\n"
+    "# Veremos funciones más adelante.\n",
+    "num_real = 24.686\n",
+    "num_redondeado = round(num_real, 2)\n",
+    "print(num_redondeado)\n",
+    "print(type(num_redondeado))"
    ]
   },
   {
@@ -92,10 +122,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_redondeado = 24.69\n",
+    "num_convertido = round(num_redondeado, 0)\n",
+    "print(num_convertido, type(num_convertido)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(num_convertido))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +165,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.69 <class 'str'>\n",
+      "12 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_real = 24.69\n",
+    "num_entero = 12\n",
+    "real_str = str(num_real)\n",
+    "entero_str = str(num_entero)\n",
+    "print(real_str, type(real_str))\n",
+    "print(entero_str, type(entero_str))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +195,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 <class 'str'>\n",
+      "98 <class 'int'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '98,33'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[39]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(mi_entero, \u001b[38;5;28mtype\u001b[39m(mi_entero))\n\u001b[32m      5\u001b[39m mi_cadena_real = \u001b[33m\"\u001b[39m\u001b[33m98,33\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m mi_real = \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmi_cadena_real\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: '98,33'"
+     ]
+    }
+   ],
+   "source": [
+    "mi_cadena = \"98\"\n",
+    "mi_entero = int(mi_cadena)\n",
+    "print(mi_cadena, type(mi_cadena))\n",
+    "print(mi_entero, type(mi_entero))\n",
+    "mi_cadena_real = \"98,33\"\n",
+    "mi_real = float(mi_cadena_real)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98.33 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_cadena_real = \"98.33\"\n",
+    "mi_real = float(mi_cadena_real)\n",
+    "print(mi_real, type(mi_real))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,8 +259,79 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano = bool(123)\n",
+    "print(booleano, type(booleano))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano = bool(0)\n",
+    "print(booleano, type(booleano))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'bool'>\n",
+      "True <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano = bool(\"\")\n",
+    "booleano2 = bool(\"Otro bool\")\n",
+    "print(booleano, type(booleano))\n",
+    "print(booleano2, type(booleano))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'str'>\n",
+      "True <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "bool_str = str(booleano)\n",
+    "bool_2_str = str(booleano2)\n",
+    "print(bool_str, type(bool_str))\n",
+    "print(bool_2_str, type(bool_2_str))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,8 +357,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '68,23'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m real_str = \u001b[33m\"\u001b[39m\u001b[33m68,23\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m real = \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mreal_str\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: '68,23'"
+     ]
+    }
+   ],
+   "source": [
+    "real_str = \"68,23\"\n",
+    "real = float(real_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,7 +387,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "real_str = real_str.replace(\",\", \".\")\n",
+    "real = float(real_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,8 +403,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.23 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "real_str = real_str.replace(\",\", \".\")\n",
+    "real = float(real_str)\n",
+    "print(real, type(real))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,7 +451,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primer_input = input(\"Escribe tu nombre\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -316,10 +540,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
