--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/05_Operaciones_Aritmeticas_Comparativas_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/05_Operaciones_Aritmeticas_Comparativas_alumno_wtoc.ipynb
@@ -73,7 +73,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_entero = 2\n",
+    "num_real = 34.2\n",
+    "sum_num = num_entero + num_real\n",
+    "print(sum_num, type(sum_num))\n",
+    "mult_num = num_entero + num_real\n",
+    "print(mult_num, type(mult_num))\n",
+    "pot_num = num_entero**num_real\n",
+    "div_num = num_entero / num_real\n",
+    "rest_num = num_entero % num_real\n",
+    "cociente_num = num_entero // num_real"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "1.0\n",
+      "123.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.sqrt(25))\n",
+    "print(math.cos(0))\n",
+    "print(math.fabs(-123.45))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[32;43m4\u001b[39;49m\u001b[43m/\u001b[49m\u001b[32;43m0\u001b[39;49m\n",
+      "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "4/0"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
