--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/07_Funciones_builtin_y_Metodos_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/07_Funciones_builtin_y_Metodos_alumno_wtoc.ipynb
@@ -67,14 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "233\n"
+     ]
+    }
+   ],
    "source": [
     "# Len se usa para calcular la longitud de una variable. Ya veras que lo usaremos mucho en colecciones\n",
+    "print(len(\"Vamos a ver la longitud de esta cadena de texto.\"))\n",
     "\n",
+    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n",
     "\n",
-    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n"
+    "print(max(1,12,34,54,233))"
    ]
   },
   {
@@ -97,11 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STRING EN MINUSCULAS\n",
+      "mayusculas a minusculas\n",
+      "ctring en minucculac\n",
+      "['Esto', 'se', 'va', 'a', 'convertir', 'en', 'una', 'lista', 'de', 'strings']\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "string_ejemplo = \"string en minusculas\"\n",
+    "\n",
+    "print(string_ejemplo.upper())\n",
+    "\n",
+    "print(\"MAYUSCULAS A MINUSCULAS\".lower())\n",
+    "\n",
+    "print(string_ejemplo.replace(\"s\", \"c\"))\n",
+    "\n",
+    "print(\"Esto se va a convertir en una lista de strings\".split(\" \"))\n",
+    "\n",
+    "print(string_ejemplo.index(\"m\"))"
    ]
   },
   {
@@ -161,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
