--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/08_Listas_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/08_Listas_alumno_wtoc.ipynb
@@ -52,17 +52,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [1,2,3,4]\n",
+    "print(numeros, type(numeros))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['asdas', 'asdkgh', 'ujfasfla'] <class 'list'>\n",
+      "[True, False, True] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "strings = [\"asdas\", \"asdkgh\", \"ujfasfla\"]\n",
+    "print(strings, type(strings))\n",
+    "\n",
+    "booleanos = [True, False, not False]\n",
+    "print(booleanos, type(booleanos))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['asdas', 'asdkgh']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(strings[:2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,10 +158,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Fisica', 'Quimica', 'Matematicas', 'Literatura']\n",
+      "['Fisica', 'Quimica', 'Matematicas', 'Literatura', 'Ed.Fisicas']\n",
+      "['Fisica', 'Quimica', 'Filosofia', 'Matematicas', 'Literatura', 'Ed.Fisicas']\n",
+      "['Ed.Fisicas', 'Filosofia', 'Fisica', 'Literatura', 'Matematicas', 'Quimica']\n",
+      "['Ed.Fisicas', 'Fisica', 'Literatura', 'Matematicas', 'Quimica']\n",
+      "['Ed.Fisicas', 'Fisica', 'Literatura', 'Quimica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "asignaturas = [\"Fisica\", \"Quimica\", \"Matematicas\", \"Literatura\"]\n",
+    "print(asignaturas)\n",
+    "\n",
+    "asignaturas.append(\"Ed.Fisicas\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "asignaturas.insert(2, \"Filosofia\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "asignaturas.sort()\n",
+    "print(asignaturas)\n",
+    "\n",
+    "asignaturas.pop(1)\n",
+    "print(asignaturas)\n",
+    "\n",
+    "asignaturas.remove(\"Matematicas\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
