--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,10 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\tque ahorra trabajo y nos hace la vida más facil,\n",
+      "\t\tnos aporta tan poca felicidad?\n",
+      "\t\t\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      "\"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('¿Por qué esta magnífica tecnología científica,\\n\\tque ahorra trabajo y nos hace la vida más facil,\\n\\t\\tnos aporta tan poca felicidad?\\n\\t\\t\\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\\n\"Albert Einstein\"')"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calle Los Olmos 12 Castellón 48023.\n"
+     ]
+    }
+   ],
+   "source": [
+    "calle = \"Calle Los Olmos\"\n",
+    "num_calle = \" 12\"\n",
+    "poblacion = \" Castellón\"\n",
+    "cp = \" 48023.\"\n",
+    "combinacion = calle + num_calle + poblacion + cp\n",
+    "print(combinacion) \n"
+   ]
   },
   {
    "attachments": {
@@ -140,10 +169,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calle Los Olmos 12 Castellón 48023.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nEste programa combina una serie de cadenas de texto\\nque forman la dirreccón de la persona.\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calle = \"Calle Los Olmos\" # Nombre de la calle\n",
+    "num_calle = \" 12\" # Número de la calle\n",
+    "poblacion = \" Castellón\" # Nombre de la población\n",
+    "cp = \" 48023.\" # Número del código postal\n",
+    "combinacion = calle + num_calle + poblacion + cp # Suama de todas las cadenas de texto\n",
+    "print(combinacion) \n",
+    "\n",
+    "\"\"\"\n",
+    "Este programa combina una serie de cadenas de texto\n",
+    "que forman la dirreccón de la persona.\n",
+    "\"\"\""
+   ]
   },
   {
    "attachments": {
@@ -180,10 +239,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (2379147892.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31motra_var = \"Ejercicio\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_variable = \"Economía\" # Correcto\n",
+    "otra_var = \"Ejercicio\n",
+    "True = \"Ejercicio\" # Incorrecto\n",
+    "mi variab1e = \"Alpha\" # Incorrecto\n",
+    "exec = True # Correcto\n",
+    "import = 40 # Incorrecto\n",
+    "81mi_variable = \"Agua\" # Incorrecto\n",
+    "mi_variable10 = 6 # Correcto"
+   ]
   },
   {
    "attachments": {
@@ -214,6 +291,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Porcentaje de victorias: 30.0%\n",
+      "Porcentaje de derrotas: 70.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "victorias = 30\n",
+    "derrotas = 70\n",
+    "total = victorias + derrotas\n",
+    "\n",
+    "porcentaje_victorias = victorias * 100 / total\n",
+    "print(f\"Porcentaje de victorias: {porcentaje_victorias}%\")\n",
+    "porcentaje_derrotas = derrotas * 100 / total\n",
+    "print(f\"Porcentaje de derrotas: {porcentaje_derrotas}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "porcentaje_derrotas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "porcentaje_victorias"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -222,7 +364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
