--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_entero = 2\n",
+    "num_real = 23.12\n",
+    "type(num_entero)\n",
+    "type(num_real)\n",
+    "sum_num = num_entero + num_real\n",
+    "type(sum_num)\n",
+    "del num_entero, num_real"
+   ]
   },
   {
    "attachments": {
@@ -85,10 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.65 grados son 0.4476769531365455 radianes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "grados = input(\"Dime los grados que quieres pasar a radianes: \")\n",
+    "radianes = float(grados)*(math.pi/180)\n",
+    "print(f\"{grados} grados son {radianes} radianes\")"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El area de tu paralelogramo es de: 1350.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = input(\"Dime la longitud de la base: \")\n",
+    "altura = input(\"Dime la longitud de la altura: \")\n",
+    "area = float(base) * float(altura)\n",
+    "print(f\"El area de tu paralelogramo es de: {area}\")"
+   ]
   },
   {
    "attachments": {
@@ -129,10 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El area de tu paralelogramo es de: 603.47\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = input(\"Dime la longitud de la base: \")\n",
+    "altura = input(\"Dime la longitud de la altura: \")\n",
+    "if \",\" in base: base = base.replace(\",\", \".\")\n",
+    "if \",\" in altura: altura = altura.replace(\",\", \".\")\n",
+    "area = float(base) * float(altura)\n",
+    "print(f\"El area de tu paralelogramo es de: {area}\")"
+   ]
   },
   {
    "attachments": {
@@ -151,22 +201,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdfsd, naciste en el año 1995.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = float(input(\"¿Cuál es tu edad? \"))\n",
+    "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
+    "año_nacimiento = año_actual - edad\n",
+    "\n",
+    "print(f\"{nombre}, naciste en el año {int(año_nacimiento)}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
-    "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
-    "\n",
-    "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
