--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,16 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = 4\n",
+    "b = \"Text\"\n",
+    "c = 4.1\n",
+    "print(a == b)\n",
+    "print(a != c)\n",
+    "print(a > c)\n",
+    "print(c <= a)\n",
+    "print(b != c)\n"
+   ]
   },
   {
    "attachments": {
@@ -104,10 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Son iguales: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "input1 = input(\"Dame un valor\")\n",
+    "input2 = input(\"Dame otro valor\")\n",
+    "\n",
+    "iguales = (input1 == input2)\n",
+    "\n",
+    "print(f\"Son iguales: {iguales}\") "
+   ]
   },
   {
    "attachments": {
@@ -126,19 +150,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Todos son iguales: False\n",
-      "Todos son iguales: False\n"
+      "¿Todos los valores son iguales? False\n",
+      "¿Al menos dos valores son iguales? True\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "input1 = input(\"Dame un valor\")\n",
+    "input2 = input(\"Dame otro valor\")\n",
+    "input3 = input(\"Dame otro valor\")\n",
+    "\n",
+    "# Primera salida: si todos son iguales\n",
+    "todos_iguales = (input1 == input2 == input3)\n",
+    "\n",
+    "# Segunda salida: si al menos dos son iguales\n",
+    "al_menos_dos_iguales = (input1 == input2) or (input1 == input3) or (input2 == input3)\n",
+    "\n",
+    "print(f\"¿Todos los valores son iguales? {todos_iguales}\")\n",
+    "print(f\"¿Al menos dos valores son iguales? {al_menos_dos_iguales}\")"
+   ]
   },
   {
    "attachments": {
@@ -162,12 +199,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "* False\n",
+    "* False\n",
+    "* False\n",
+    "* False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
