--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
@@ -61,10 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.451\n",
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [4, 6, 8, -1]\n",
+    "\n",
+    "print(max(lista))\n",
+    "print(sum(lista))\n",
+    "print(round(63.451256965,3))\n",
+    "print(abs(-74))"
+   ]
   },
   {
    "attachments": {
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -104,11 +122,26 @@
       "En Un Lugar De La Mancha, De Cuyo Nombre No Quiero Acordarme.\n",
       "['En', 'un', 'lugar', 'de', 'la', 'Mancha,', 'de', 'cuyo', 'nombre', 'no', 'quiero', 'acordarme.']\n",
       "En un lugar de la Mancha; de cuyo nombre no quiero acordarme.\n",
-      "En un lugr de l Mnch, de cuyo nombre no quiero cordrme.\n"
+      "En un lug r de l  M nch , de cuyo nombre no quiero  cord rme.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "string = \"En un lugar de la Mancha, de cuyo nombre no quiero acordarme.\"\n",
+    "\n",
+    "print(string.upper())\n",
+    "\n",
+    "print(string.lower())\n",
+    "\n",
+    "print(string.title())\n",
+    "\n",
+    "lista = string.split(\" \")\n",
+    "print(lista)\n",
+    "\n",
+    "print(string.replace(\",\", \";\"))\n",
+    "\n",
+    "print(string.replace(\"a\", \" \"))"
+   ]
   },
   {
    "attachments": {
@@ -138,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -146,18 +179,51 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "[2, 3, 4]\n",
-      "[2, 3, 5, 4]\n",
-      "[2, 3, 5, 4, 6, 7, 8, 9]\n"
+      "[1, 3, 5, 4]\n",
+      "[1, 3, 5, 4, 1, 2, 3, 4]\n",
+      "[1, 1, 2, 3, 3, 4, 4, 5]\n",
+      "[5, 4, 4, 3, 3, 2, 1, 1]\n"
      ]
     }
    ],
+   "source": [
+    "lista = [1, 2, 3]\n",
+    "\n",
+    "lista.append(4)\n",
+    "\n",
+    "print(sum(lista))\n",
+    "\n",
+    "lista.pop(1)\n",
+    "\n",
+    "lista.insert(2, 5)\n",
+    "\n",
+    "print(lista)\n",
+    "\n",
+    "lista2 = [1, 2, 3, 4]\n",
+    "\n",
+    "lista3 = lista + lista2\n",
+    "\n",
+    "print(lista3)\n",
+    "\n",
+    "lista3.sort()\n",
+    "\n",
+    "print(lista3)\n",
+    "\n",
+    "lista3.reverse()\n",
+    "print(lista3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
