--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
@@ -55,10 +55,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandaremos las 55 pizzas a la dirección 3245234.\n",
+      "    Serán 522.65.\n",
+      "    Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "precio_mediana = 9.90\n",
+    "precio_familiar = 8.95\n",
+    "input_correcto = False\n",
+    "\n",
+    "while(not input_correcto):\n",
+    "    pizz_familiar = input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana ¿Cuántas pizzas familiares desea?\")\n",
+    "    pizz_mediana = input(\"Estupendo, ¿cuántas pizzas medianas desea?\")\n",
+    "    if pizz_familiar.isdigit() and pizz_mediana.isdigit():\n",
+    "        input_correcto = True\n",
+    "    else:\n",
+    "        input(\"La información introducida es incorrecta, vuelva a intentarlo.\\n\\\n",
+    "                Pulse Intro para volver a hacer el pedido...\")\n",
+    "        os.system('cls')\n",
+    "        \n",
+    "pizz_familiar = int(pizz_familiar)\n",
+    "pizz_mediana = int(pizz_mediana)\n",
+    "direcc = input(f\"Estupendo, se están preparando {pizz_familiar} pizzas familiares y {pizz_mediana} pizzas medianas. Digame su dirección.\")\n",
+    "\n",
+    "print(f\"Le mandaremos las {pizz_familiar + pizz_mediana} pizzas a la dirección {direcc}.\\n\\\n",
+    "    Serán {(pizz_familiar * precio_familiar) + (pizz_mediana * precio_mediana)}.\\n\\\n",
+    "    Muchas gracias por su pedido.\")\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -83,6 +118,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número máximo menos el número mínimo no es igual a la suma total dividida por 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "input_correcto = False\n",
+    "lista_numeros = []\n",
+    "\n",
+    "while(not input_correcto):\n",
+    "    numeros_enteros = input(\"Introduzca 3 números enteros separados por comas\")\n",
+    "    lista_numeros = numeros_enteros.split(\",\")\n",
+    "    if False not in [n.isdigit() for n in lista_numeros] and len(lista_numeros) == 3:\n",
+    "        input_correcto = True\n",
+    "        lista_numeros = [int(n) for n in lista_numeros]\n",
+    "    else:\n",
+    "        input(\"Datos erroneos, pulse Intro para volver a intentarlo...\")\n",
+    "        os.system('cls')\n",
+    "\n",
+    "max_num = max(lista_numeros)\n",
+    "min_num = min(lista_numeros)\n",
+    "sum_num = sum(lista_numeros)\n",
+    "\n",
+    "if (max_num - min_num) == (sum_num/5):\n",
+    "    print(\"El número máximo menos el número mínimo es igual a la suma total dividida por 5\")\n",
+    "else:\n",
+    "    print(\"El número máximo menos el número mínimo no es igual a la suma total dividida por 5\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -91,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
